--- a/package.json
+++ b/package.json
@@ -18,5 +18,13 @@
   "homepage": "https://github.com/jonhegg/myrepo#readme",
   "dependencies": {
     "jquery": "^2.1.4"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.10.1",
+    "gulp": "^3.9.0",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-minify-css": "^1.2.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.1"
   }
 }
