--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "devDependencies": {
     "browser-sync": "^2.10.1",
     "gulp": "^3.9.0",
+    "gulp-compile-handlebars": "^0.6.1",
     "gulp-imagemin": "^2.4.0",
     "gulp-minify-css": "^1.2.2",
+    "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1"
   }
