--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/jonhegg/myrepo#readme",
   "dependencies": {
     "countdown": "^2.6.0",
-    "normalize.css": "^3.0.3"
+    "normalize.css": "^3.0.3",
+    "superagent": "^1.6.1"
   },
   "devDependencies": {
     "browser-sync": "^2.10.1",
