--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "browser-sync": "^2.10.1",
     "browserify": "^13.0.0",
     "gulp": "^3.9.0",
+    "gulp-a11y": "^0.1.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-compile-handlebars": "^0.6.1",
     "gulp-imagemin": "^2.4.0",
